kustomize/overlay/dev/amaan-feature-testing/service-v1-0-0-patch.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: amaan-feature-testing-v1-0-0
    applicationId: app_313926a7-ff51-4497-af13-c685d3b45b31
    version: v1.0.0
    organizationId: org_6de1b366-9da6-4d55-b363-f5a2c4382016
    projectId: project_f9d8de1f-1e49-4d0a-8e49-657f15fd532b
    environmentId: env_d3c9b73e-8f9c-46aa-a8ef-fd6addc71a6b
  name: amaan-feature-testing-v1-0-0
spec:
  selector:
    app: amaan-feature-testing-v1-0-0
