kustomize/overlay/dev/amaan-feature-testing/amaan-feature-testing-dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amaan-feature-testing-dev-ingress
  namespace: common-project-testing-dev
  annotations:
    skyu.io/ingress.cert: private
    skyu.io/ingress.provider: nginx
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/backend-protocol: http
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    nginx.ingress.kubernetes.io/permanent-redirect-code: '301'
spec:
  tls:
    - secretName: secret0
      hosts:
        - '8080'
  rules:
    - host: '8080'
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: amaan-feature-testing-v1-0-0
                port:
                  number: 80
